# Pyproject used for the docker implementation of the Android World Environment
# only. The non-docker implementation uses a requirements.txt file.

[build-system]
requires = ["setuptools>=61.0", "grpcio-tools==1.71.2"]
build-backend = "setuptools.build_meta"

[project]
name = "android_world"
version = "0.1.0"
description = "Android World Environment Project"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "absl-py==2.3.1",
    "android_env==1.2.3",
    "dm_env==1.6",
    "fuzzywuzzy==0.18.0",
    "google-generativeai",
    "grpcio-tools==1.71.2",
    "protobuf==5.29.5",
    "immutabledict",
    "IPython",
    "jsonschema",
    "numpy",
    "opencv-python",
    "pandas",
    "pydub",
    "python-Levenshtein",
    "pytest",
    "requests",
    "tenacity",
    "termcolor",
    "fastapi",
    "uvicorn",
    "yapf",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.json", "*.proto", "*.textproto", "*.xml", "res/xml/*.xml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py","*_test.py"]

[tool.yapf]
based_on_style = "google"
indent_width = 2
column_limit = 80
